--- a/sd-customer-eligibility/pom.xml
+++ b/sd-customer-eligibility/pom.xml
@@ -135,7 +135,7 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-dmn-core</artifactId>
-
+      <version>7.27.0.Final</version>
     </dependency>
 
     <dependency>
