--- a/sd-customer-eligibility/pom.xml
+++ b/sd-customer-eligibility/pom.xml
@@ -135,7 +135,7 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-dmn-core</artifactId>
-      <version>7.27.0.Final</version>
+
     </dependency>
 
     <dependency>
@@ -216,7 +216,7 @@
       <plugin>
         <groupId>org.jboss.redhat-fuse</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${bom.version}</version>
+        <version>7.4.0.fuse-740036-redhat-00002</version>
 
         <executions>
           <execution>
