--- a/sd-customer-eligibility/pom.xml
+++ b/sd-customer-eligibility/pom.xml
@@ -154,7 +154,7 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-core</artifactId>
-
+        <version>7.27.0.Final</version>
     </dependency>
 
 
